[package]
name = "web3games-runtime"
version = "0.0.1"
authors = ["Web3Games Developers"]
edition = "2018"
license = 'GPL-3.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true, default-features = false }

pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

# Contract
pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

# Used for runtime benchmarking
# frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
# frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, optional = true }
# hex-literal = { version = "0.3.1", optional = true }

# EVM
pallet-ethereum = { version = "0.1.0", default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.1" }
pallet-evm = { version = "3.0.0", default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.1" }
pallet-evm-precompile-simple = { version = "3.0.0", default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.1" }

fp-rpc = { default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.1" }

# Orml packages
orml-traits = { version = '0.4.1-dev', default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }
orml-currencies = { version = '0.4.1-dev', default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }
orml-tokens = { version = '0.4.1-dev', default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git", branch = "master" }

primitives = { package = "web3games-primitives", path = "../primitives", default-features = false }
precompile = { package = "pallet-evm-precompile", default-features = false, path = "../pallets/evm-precompile" }
chain-extension = { package = "pallet-chain-extension", default-features = false, path = "../pallets/chain-extension" }

# local pallet
pallet-erc1155 = { default-features = false, path = "../pallets/erc1155" }
pallet-currency-token = { default-features = false, path = "../pallets/currency-token" }
pallet-dex = { default-features = false, path = "../pallets/dex" }
pallet-nft = { default-features = false, path = "../pallets/nft" }

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-scheduler/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"orml-traits/std",
	"orml-currencies/std",
	"orml-tokens/std",

	"precompile/std",
	"chain-extension/std",
	"pallet-erc1155/std",
	"pallet-currency-token/std",
	"pallet-dex/std",
	"pallet-nft/std",
]
# runtime-benchmarks = [
# 	"sp-runtime/runtime-benchmarks",
# 	"frame-benchmarking",
# 	"frame-support/runtime-benchmarks",
# 	"frame-system-benchmarking",
# 	"hex-literal",
# 	"frame-system/runtime-benchmarks",
# 	"pallet-balances/runtime-benchmarks",
# 	"pallet-timestamp/runtime-benchmarks",
# 	"pallet-contracts/runtime-benchmarks",
# ]
