[package]
name = "pallet-chain-extension"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex = { version = "0.4.2", optional = true }

sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-contracts = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git",  branch = "master", default-features = false }

pallet-erc1155 = { default-features = false, path = "../../pallets/erc1155" }

[features]
default = ["std"]
std = [
  "codec/std",
  "hex",
  "sp-runtime/std",
  "sp-std/std",
  "frame-support/std",
  "pallet-contracts/std",
  "pallet-erc1155/std",
]
