[package]
name = "pallet-chain-extension"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2018"
license = 'GPL-3.0'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex = { version = "0.4.2", optional = true }
log = { version = "0.4.14", default-features = false }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }

primitives = { package = "web3games-primitives", path = "../../primitives", default-features = false }
pallet-tokens = { default-features = false, path = "../../pallets/tokens" }

[features]
default = ["std"]
std = [
  "codec/std",
  "hex",
  "log/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-support/std",
  "pallet-contracts/std",
  "primitives/std",
  "pallet-tokens/std",
]
