[package]
name = "pallet-evm-precompile"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
log = "0.4.8"
rustc-hex = { version = "2.0.1", default-features = false }

frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
fp-evm = { version = "0.8.0", default-features = false, git = "https://github.com/Web3-Substrate-Game-World/frontier", branch = "sgc_v0.1" }
pallet-evm = { version = "3.0.0", default-features = false, git = "https://github.com/Web3-Substrate-Game-World/frontier", branch = "sgc_v0.1" }
pallet-evm-precompile-simple = { version = "3.0.0", default-features = false, git = "https://github.com/Web3-Substrate-Game-World/frontier", branch = "sgc_v0.1" }

evm = { git = "https://github.com/rust-blockchain/evm", branch = "master", default-features = false, features = ["with-codec"] }
pallet-erc1155 = { default-features = false, path = "../../pallets/erc1155" }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"sp-std/std",
	"sp-core/std",
	"fp-evm/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"evm/std",
	"pallet-erc1155/std",
]
