[package]
name = "pallet-evm-precompile"
version = "0.1.0"
authors = ["Web3Games Developers"]
edition = "2018"
license = 'GPL-3.0'

[dependencies]
rustc-hex = { version = "2.0.1", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
fp-evm = { version = "0.8.0", default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.1" }
pallet-evm = { version = "3.0.0", default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.1" }
pallet-evm-precompile-simple = { version = "3.0.0", default-features = false, git = "https://github.com/web3gamesofficial/frontier", branch = "web3games-v0.1" }
log = { version = "0.4.14", default-features = false }

evm = { version = "0.26.0", default-features = false, features = ["with-codec"] }
pallet-tokens = { default-features = false, path = "../../pallets/tokens" }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"sp-std/std",
	"sp-core/std",
	"fp-evm/std",
	"pallet-evm/std",
	"pallet-evm-precompile-simple/std",
	"log/std",
	"evm/std",
	"pallet-tokens/std",
]
